# frechet

./: .env  LICENSE.md  README.md  requirements.txt  setup.cfg
doc/: conf.py  frechet.rst  frechet.tiger.rst
docs/: index.rst
frechet/: census.py  fips.py  geom.py  settings.py  tiger.py  url.py  util.py
tests/: test_cb.py  test_census.py  test_fips.py  test_shp.py
