[metadata]
name = frechet
version = 0.0.1
author = Brendan Cooley
license = MIT
description = wip
url = http://github.com/brendancooley/frechet
long_description = file: README.md
classifiers =
    License :: MIT

[options]
python_requires = ~=3.7
packages = find:
install_requires =
    census>=0.8.19
    h3>=3.7.4