[metadata]
name = frechet
version = 0.0.1
author = Brendan Cooley
license = MIT
description = wip
url = http://github.com/brendancooley/frechet
long_description = file: README.md
classifiers =
    License :: MIT

[options]
python_requires = ~=3.7
packages = find:
install_requires =
    pandas>=1.4.2

[options.extras_require]
develop =
    pytest>=5.4.2
    sphinx>=1.3
    sphinx-rtd-theme>=1.0.0